PEP + project updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
                     <div class="subheading mb-5"> (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
                     <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in tech consulting with a keen interest in software engineering.
-                        Currently, I'm working as an Experienced Consultant in the Software Engineering practice at West Monroe Partners where I focus primarily on Frontend/UI development. Welcome to my home page!</p>
+                        Currently, I'm working as an Experienced Consultant in the Product Engineering Practice at West Monroe Partners where I focus on full stack development.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
@@ -59,7 +59,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Experienced Consultant</h3>
                             <div class="subheading mb-3">West Monroe Partners - Chicago, IL</div>
-                            <p>Currently working in West Monroe Partners' Software Engineering Practice with a focus in Frontend Development.</p>
+                            <p>Currently working in West Monroe Partners' Product Engineering Practice. Project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                     </div>
@@ -94,14 +94,6 @@
                             <p>At Accenture, I helped support the PMO Team of a large SAP project by writing productivity macros in Excel and analyzing past testing cycles performance using SQL</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2017 - August 2017</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Global Quality Intern</h3>
-                            <div class="subheading mb-3">S. C. Johnson & Son, Inc. - Racine, WI</div>
-                            <p>I spent my summer at SCJ interning on the Global Quality Team, where my main focus was to perform root cause analysis for a $5M+ retail shelf spoilage issue at SCJ's largest North American retailer. I also used CAD to design a tool used in production line testing for the <a href="https://www.glade.com/en/products/oils-and-gels/glade-plugins-scented-oil-warmer">Glade PlugIn Scented Oil Refill</a>.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2016 - August 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -168,16 +160,22 @@
             <section class="resume-section" id="side-projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
+                    <h4>Divvy-Bikes-Scraper</h4>
+                    <center><img src="https://user-images.githubusercontent.com/44789534/162628460-c75272bf-42a8-4a21-9e63-edabfe0a4a3f.png" width="30%"/></center>
+                    <p>Divvy-Bikes-Scraper is a Python script that exports a Divvy bikes member's ride data into a .csv file. Lyft, the operator of Divvy bikes, does not have a public API for Divvy bikes so I had to reverse engineer the necessary GraphQL requests using the Network tab in Chrome Dev Tools.</p>
+                    <p><u><a href="https://github.com/ColemanMitch/Divvy-Bikes-Scraper">Link to repo on GitHub</a></u></p>
                     <h4>Spowerfy-Redux</h4>
-                    <p>Spowerfy-Redux is a web app written in React that controls a user's Spotify playback to skip to the next song in a playlist at a specified interval (users can select between 5 - 120 seconds). Users also have the option to start the playback on any of their active devices and any of their playlists. The ideal use case for Spowerfy is to automate your next power hour! 🍺 <br><br>
+                    <center><img src="https://user-images.githubusercontent.com/44789534/162627337-af8a3ed6-8727-4603-9cd7-38729679d489.png" width="50%"/></center>
+                    <p>Spowerfy-Redux is a web app written in React and Node that controls a user's Spotify playback to skip to the next song in a playlist at a specified interval (users can select between 5 - 120 seconds). Users also have the option to start the playback on any of their active devices and any of their playlists. The ideal use case for Spowerfy is to automate your next power hour! 🍺 <br><br>
                     It is also a refactor of an existing project that I built back in 2020 in Python with Flask which can be found linked <a href="https://github.com/ColemanMitch/Spowerfy">here.</a></p>
                     <p><u><a href="https://spowerfy-frontend.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
-                    <p><u><a href="https://github.com/ColemanMitch/Spowerfy-Redux">Link to GitHub project repo</a></u></p>
+                    <p><u><a href="https://github.com/ColemanMitch/Spowerfy-Redux">Link to repo on GitHub</a></u></p>
                     <hr>
                     <h4>GroupMe.FYI</h4>
+                    <center><img src="https://user-images.githubusercontent.com/44789534/162627905-4981ec62-70f2-419d-b54d-c3fbbfe3650e.png" width="50%"/></center>
                     <p>GroupMe.FYI is a web app written in Django that authenticates with GroupMe allowing users to see key stats (total likes, total messages, etc.) about the user's groups.</p>
                     <p><u><a href="https://groupmefyi.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
-                    <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to GitHub project repo</a></u></p>
+                    <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to repo on GitHub</a></u></p>
                     <hr>
                     <h4>Speech2Tweet</h4>
                     <center><img src="assets/img/Speech2Tweet_Live_Demo.gif" width=70% class="ImageBorder"></center>
@@ -187,7 +185,7 @@
                         I took the dead-end I ran into with Python as an opportunity
                         to brush up on JavaScript. The embedded gif above shows the invocation of the skill in the Alexa Developer Console side-by-side with the output on Twitter. </p>
                         <p>Note that the source of my "hello world" tweet is "Speech 2 Tweet"</p>
-                    <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to GitHub project repo</a></u></p>                    
+                    <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to repo on GitHub</a></u></p>                    
                     <hr>
                 </div>
             </section>
