Update Education and Bio

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
-                    <div class="subheading mb-5"> (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
-                    <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in tech consulting with a keen interest in software engineering.
-                        Currently, I'm working as an Experienced Consultant in the Product Engineering Practice at West Monroe Partners where I focus on full stack development.</p>
+                    <div class="subheading mb-5"> (847) 636-6773 · <a href="mailto: w.coleman.mitchell@gmail.com" style="color:#6c757d;">w.coleman.mitchell@gmail.com</a></div>
+                    <p class="lead mb-5">I am a Chicago-based tech consultant with a keen interest in software development.
+                        Currently, I'm working as an Experienced Consultant in the Product Engineering Practice at West Monroe Partners where I focus on full stack development. I'm also currently pursuing a Masters in Computer Science at Georgia Tech.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
@@ -59,7 +59,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Experienced Consultant</h3>
                             <div class="subheading mb-3">West Monroe Partners - Chicago, IL</div>
-                            <p>Currently working in West Monroe Partners' Product Engineering Practice. Project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
+                            <p>I'm currently working in the Product Engineering Practice at West Monroe Partners. My project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                     </div>
@@ -104,10 +104,16 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Georgia Institute of Technology</h3>
+                            <div class="subheading mb-3">Master of Science in Computer Science</div>
+                            <p><u>Coursework In Progress</u>: Software Design & Architecture</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">University of Notre Dame</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <i><div>Mechanical Engineering</div></i>
-                            <p>GPA: 3.6/4.0</p>
+                            <div class="subheading mb-3">Bachelor of Science in Mechanical Engineering</div>
                             <p><u>Notable Coursework</u>: Mechanical Engeering Senior Design Project, Design Methodology, C/C++ Programming, Electrical Engineering & Embedded Systems, Robotics</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - May 2018</span></div>
@@ -199,7 +205,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Outside of work, I enjoy traveling (during non-pandemic times), exercising, reading, listening to podcasts, and following major North American sports (NCAAF, NFL, MLB, NBA, etc.)</p>
+                    <p>Outside of work, I enjoy traveling, exercising, reading, listening to podcasts, and following major North American sports (NCAAF, NFL, MLB, NBA, etc.)</p>
                     <center><img class="img-fluid img-profile" src="assets/img/spain-man.jpg" alt="" width=45% /></span></a>
                     <p>Enjoying the vistas of Toledo, Spain!</p></center>
                 </div>
