Beginning of year updates for 2023

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <p>In Deloitte Consulting's S & A Offering Portfolio, I've had the opportunity to work on several cases across various industries. 
                                 Some past clients I’ve worked for include a national health care system focused on optimizing their revenue cycle by mitigating insurance payor denials and the current 
                                 IL Governor J.B. Pritzker’s <a href="https://dupagedemocrats.com/pritzkertransition/">Healthy Children and Families Transition Committee</a>. 
-                                Most recently, I worked with a state government client where I led a team of developers to build dashboards quantifying the impact ($ issuance, individuals affected) of COVID-19 policy changes.</p>
+                                Most recently, I worked with a state government client where I led a team of ETL and Tableau developers to build dashboards quantifying the impact ($ issuance, individuals affected) of COVID-19 policy changes.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2020 - April 2021<br>July 2018 - July 2020</span></div>
                     </div>
@@ -106,7 +106,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Georgia Institute of Technology</h3>
                             <div class="subheading mb-3">Master of Science in Computer Science</div>
-                            <p><u>Coursework In Progress</u>: Software Design & Architecture</p>
+                            <p><u>Coursework In Progress</u>: Machine Learning for Trading</p>
+                            <p><u>Completed Coursework</u>: Software Design & Architecture</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2022 - Present</span></div>
                     </div>
@@ -168,19 +169,20 @@
                     <h2 class="mb-5">Side Projects</h2>
                     <h4>Divvy-Bikes-Scraper</h4>
                     <center><img src="https://user-images.githubusercontent.com/44789534/162628460-c75272bf-42a8-4a21-9e63-edabfe0a4a3f.png" width="30%"/></center>
-                    <p>Divvy-Bikes-Scraper is a Python script that exports a Divvy bikes member's ride data into a .csv file. Lyft, the operator of Divvy bikes, does not have a public API for Divvy bikes so I had to reverse engineer the necessary GraphQL requests using the Network tab in Chrome Dev Tools.</p>
+                    <p>Divvy-Bikes-Scraper is a Python script that enables a Divvy bikes member to export all their ride data into a .csv file.</p>
+                    <p>Lyft, the operator of Divvy bikes, does not have a public API for Divvy bikes so I had to reverse engineer the necessary GraphQL requests using the Network tab in Chrome Dev Tools.</p>
                     <p><u><a href="https://github.com/ColemanMitch/Divvy-Bikes-Scraper">Link to repo on GitHub</a></u></p>
                     <h4>Spowerfy-Redux</h4>
                     <center><img src="https://user-images.githubusercontent.com/44789534/162627337-af8a3ed6-8727-4603-9cd7-38729679d489.png" width="50%"/></center>
                     <p>Spowerfy-Redux is a web app written in React and Node that controls a user's Spotify playback to skip to the next song in a playlist at a specified interval (users can select between 5 - 120 seconds). Users also have the option to start the playback on any of their active devices and any of their playlists. The ideal use case for Spowerfy is to automate your next power hour! 🍺 <br><br>
                     It is also a refactor of an existing project that I built back in 2020 in Python with Flask which can be found linked <a href="https://github.com/ColemanMitch/Spowerfy">here.</a></p>
-                    <p><u><a href="https://spowerfy-frontend.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
+                    <p><u><a href="https://spowerfy.onrender.com/">Link</a></u> to project.
                     <p><u><a href="https://github.com/ColemanMitch/Spowerfy-Redux">Link to repo on GitHub</a></u></p>
                     <hr>
                     <h4>GroupMe.FYI</h4>
                     <center><img src="https://user-images.githubusercontent.com/44789534/162627905-4981ec62-70f2-419d-b54d-c3fbbfe3650e.png" width="50%"/></center>
                     <p>GroupMe.FYI is a web app written in Django that authenticates with GroupMe allowing users to see key stats (total likes, total messages, etc.) about the user's groups.</p>
-                    <p><u><a href="https://groupmefyi.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
+                    <p><u>Note:</u> I'm currently working on porting over this project from Python to Ruby which you can find <a href="https://GroupMeFYI-Rails.colemanmitch.repl.co">linked here on Replit</a></p>
                     <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to repo on GitHub</a></u></p>
                     <hr>
                     <h4>Speech2Tweet</h4>
@@ -205,7 +207,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Outside of work, I enjoy traveling, exercising, reading, listening to podcasts, and following major North American sports (NCAAF, NFL, MLB, NBA, etc.)</p>
+                    <p>Outside of work, I enjoy traveling, weightlifting, reading, listening to podcasts, and following major North American sports (NCAAF, NFL, MLB, NBA, etc.)</p>
                     <center><img class="img-fluid img-profile" src="assets/img/spain-man.jpg" alt="" width=45% /></span></a>
                     <p>Enjoying the vistas of Toledo, Spain!</p></center>
                 </div>
