add promo and also tweak bio

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
                     <div class="subheading mb-5"> (847) 636-6773 · <a href="mailto: w.coleman.mitchell@gmail.com" style="color:#6c757d;">w.coleman.mitchell@gmail.com</a></div>
-                    <p class="lead mb-5">I am a Chicago-based tech consultant with a keen interest in software development.
-                        Currently, I'm working as an Experienced Consultant in the Product Engineering Practice at West Monroe Partners where I focus on full stack development. I'm also currently pursuing a Masters in Computer Science at Georgia Tech.</p>
+                    <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a software engineer currently living in Chicago. 
+                        In my current role, I'm working as an Senior Software Engineering in the Product Engineering & Experience Lab at West Monroe Partners where I focus on full stack development. I'm also currently pursuing a Masters in Computer Science at Georgia Tech.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
@@ -57,11 +57,12 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Experienced Consultant</h3>
+                            <h3 class="mb-0">Senior Software Engineer</h3>
+                            <h3 class="mb-0">Software Engineer II</h3>
                             <div class="subheading mb-3">West Monroe Partners - Chicago, IL</div>
-                            <p>I'm currently working in the Product Engineering Practice at West Monroe Partners. My project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
+                            <p>I'm currently working in the Product Engineering and Experience Lab at West Monroe Partners. My project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present<br>April 2021 - February 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
