--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Cole Mitchell Personal Website</title>
+        <title>Cole Mitchell</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -43,8 +43,8 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
                     <div class="subheading mb-5"> (847) 636-6773 · <a href="mailto: w.coleman.mitchell@gmail.com" style="color:#6c757d;">w.coleman.mitchell@gmail.com</a></div>
-                    <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a software engineer currently living in Chicago. 
-                        In my current role, I'm working as an Senior Software Engineering in the Product Engineering & Experience Lab at West Monroe Partners where I focus on full stack development. I'm also currently pursuing a Masters in Computer Science at Georgia Tech.</p>
+                    <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a full stack software engineer living in Chicago. I have hands on experience building applications and performing data analysis using Python (NumPy, Pandas, Flask), JavaScript (TypeScript, React), Ruby (Rails) and SQL.
+                    <br><br>Currently, I'm working at West Monroe Partners as Senior Software Engineer in their Product Engineering & Experience Lab.<br> I'm also concurrently pursuing a Masters in Computer Science at Georgia Tech.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
