--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <section class="resume-section" id="resume">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Resume</h2>
-                    <iframe src="https://drive.google.com/file/d/1IMEY709Oxp0p1OziA1u_VCFttWR4Our_/preview?usp=sharing" width=90% height="500"></iframe>
+                    <iframe src="https://drive.google.com/file/d/1iPHZFYW11PL9GbV_dLdx4Ha-w2wExZ_h/preview" width=90% height="500"></iframe>
                     </iframe>
                 </div>
             </section>
