update completed GA Tech classes

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Georgia Institute of Technology</h3>
                             <div class="subheading mb-3">Master of Science in Computer Science</div>
-                            <p><u>Coursework In Progress</u>: Machine Learning for Trading</p>
-                            <p><u>Completed Coursework</u>: Software Design & Architecture</p>
+                            <p><u>Coursework In Progress</u>: Computer Networks</p>
+                            <p><u>Completed Coursework</u>: Software Design & Architecture, Machine Learning for Trading</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2022 - Present</span></div>
                     </div>
