--- a/index.html
+++ b/index.html
@@ -43,17 +43,14 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
-                <div class="subheading mb-5"> (847) 636-6773 · <a href="mailto: w.coleman.mitchell@gmail.com" style="color:#6c757d;">w.coleman.mitchell@gmail.com</a></div>
-                <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a full stack software engineer living in Chicago. I have hands on experience building applications and performing data analysis using Python (NumPy, Pandas, Flask), JavaScript (TypeScript, React),
-                    Ruby (Rails) and SQL.
-                    <br><br>Currently, I'm working at West Monroe Partners as Senior Software Engineer in their Product Engineering & Experience Lab.<br> I'm also concurrently pursuing a Masters in Computer Science at Georgia Tech.</p>
+                <div class="mb-5"> w.coleman.mitchell[at]gmail.com</div>
+                <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a full stack software engineer living in NYC. I have hands-on experience building scalable applications using Python, JavaScript,
+                    Ruby and Java.
+                    <br><br>Currently, I'm working at West Monroe as Senior Software Engineer in their Product Engineering & Experience Lab. I'm also concurrently pursuing a Masters in Computer Science at Georgia Tech.</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://www.github.com/ColemanMitch">
                         <i class="fab fa-github"></i></a>
-                    <a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com">
-                        <i class="far fa-envelope"></i></a>
-                    </a>
                 </div>
             </div>
         </section>
@@ -66,9 +63,15 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Senior Software Engineer</h3>
                         <h3 class="mb-0">Software Engineer II</h3>
-                        <div class="subheading mb-3">West Monroe Partners - Chicago, IL</div>
-                        <p>I'm currently working in the Product Engineering and Experience Lab at West Monroe Partners. My project experience includes helping develop product workflows for a fintech client’s commercial banking platform using a React/TypeScript/GraphQL
-                            stack and helping that same client enable new product features in their Ruby on Rails backend APIs.</p>
+                        <div class="subheading mb-3">West Monroe Partners - Chicago, IL & New York, NY</div>
+                        <p>Currently, I work in West Monroe's Product Engineering and Experience Lab (PXEL). My project experience includes:</p>
+                        <ul>
+                            <li>Developing personal loan product workflows for a unicorn fintech client's commercial banking platform using a React, TypeScript, and GraphQL stack</li>
+                            <li>Enabling new co-branded credit card features for a unicorn fintech client's Ruby on Rails backend APIs</li>
+                            <li>Supporting a large pharma company in building and maintaining a business rules engine in Python that generates leads for their salesforce, integrating with a third-party API</li>
+                            <li>Building out a greenfield banking platform in the agcredit space, supporting both the frontend (React, TypeScript, GraphQL) and backend (Java Spring)</li>
+                        </ul>
+                        </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present<br>April 2021 - February 2023</span></div>
                 </div>
@@ -77,22 +80,15 @@
                         <h3 class="mb-0">Consultant</h3>
                         <h3 class="mb-0">Analyst</h3>
                         <div class="subheading mb-3">Deloitte Consulting - Chicago, IL</div>
-                        <p>In Deloitte Consulting's Strategy & Analytics offering, I had the opportunity to work on several cases across various industries. Some past clients I worked for include a national hospital chain focused on optimizing their revenue
-                            cycle by mitigating insurance payor denials and the current Illinois Governor J.B. Pritzker’s <a href="https://dupagedemocrats.com/pritzkertransition/">Healthy Children and Families Transition Committee</a>. I also worked with
-                            a state government client where I led a team of ETL and Tableau developers to build dashboards quantifying the impact ($ issuance, individuals affected) of COVID-19 related policy changes.</p>
+                        <p>In Deloitte Consulting's Strategy & Analytics offering, I had the opportunity to work on several cases across various industries. Some past clients include:</p>
+                        <ul>
+                            <li>A national hospital chain focused on optimizing their revenue cycle by mitigating insurance payor denials</li>
+                            <li>The current Illinois Governor J.B. Pritzker’s Healthy Children and Families Transition Committee</li>
+                            <li>A state government client where I led a team of ETL and Tableau developers to build dashboards quantifying the impact (financial issuance, individuals affected) of COVID-19 related policy changes</li>
+                        </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">August 2020 - April 2021<br>July 2018 - July 2020</span></div>
                 </div>
-                <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Strategy Analyst</h3>
-                        <div class="subheading mb-3">Figuro3D - South Bend, IN</div>
-                        <p> <a href="google.com">Figuro3D</a> is an innovative 3D digital imaging tech start-up founded by a team of University of Notre Dame faculty scientists to leverage their discoveries in next generation 3D scanning technology to make
-                            high resolution 3D scanning as easy as taking a picture.</p>
-                        <p> I was a part of Figuro3D's 2018 McCloskey New Venture Competition pitch team that helped the company <a href="https://ideacenter.nd.edu/news-events/news/2018-mccloskey-new-venture-competition-winners/">secure $25K+ in cash awards</a>.</p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">February 2018 - April 2018</span></div>
-                </div> -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Consulting Summer Analyst</h3>
@@ -112,8 +108,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Georgia Institute of Technology</h3>
                         <div class="subheading mb-3">Master of Science - Computer Science</div>
-                        <p><u>Coursework In Progress</u>: Data Visualization & Analytics</p>
-                        <p><u>Completed Coursework</u>: Software Design & Architecture, Machine Learning for Trading, Computer Networks</p>
+                        <p><u>Completed Coursework</u>: Software Design & Architecture, Machine Learning for Trading, Computer Networks, Data Visualization & Analytics, AI Ethics & Society</p>
                     </div>
                     <div class="flex-shrink-0 text-md-right"><span class="text-primary">August 2022 - Present</span>
                         <br><br>
@@ -144,6 +139,7 @@
                     <li class="list-inline-item"><a href="#skills" title="React" data-toggle="tooltip"><i class="fab fa-react"></i></a></li>
                     <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
                     <li class="list-inline-item"><a href="#skills" title="Bootstrap" data-toggle="tooltip"><i class="fab fa-bootstrap"></i></a></li>
+                    <li class="list-inline-item"><a href="#skills" title="Java" data-toggle="tooltip"><i class="fab fa-java"></i></a></li>
                     <li class="list-inline-item"><a href="#skills" title="Ruby" data-toggle="tooltip"><i class="icon-ruby"></i></a></li>
                     <li class="list-inline-item"><a href="#skills" title="Rails" data-toggle="tooltip"><i class="icon-ruby-on-rails"></i></a></li>
                     <li class="list-inline-item"><a href="#skills" title="Django" data-toggle="tooltip"><i class="icon-django"></i></a></li>
