--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
                 <div class="mb-5"> w.coleman.mitchell[at]gmail.com</div>
-                <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a full stack software engineer living in NYC. I have hands-on experience building scalable applications using Python, JavaScript,
+                <p class="lead mb-5">Hi there 👋<br><br>My name is Cole and I'm a full stack software engineer living in NYC. I have hands-on experience building scalable applications using Python, TypeScript/Javascript,
                     Ruby and Java.
-                    <br><br>Currently, I'm working at West Monroe as Senior Software Engineer in their Product Engineering & Experience Lab. I'm also concurrently pursuing a Masters in Computer Science at Georgia Tech.</p>
+                    <br><br>Currently, I'm working at <a href="https://coastpay.com">Coast</a> building the future of fuel cards. I'm also concurrently pursuing a Masters in Computer Science at Georgia Tech.</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://www.github.com/ColemanMitch">
@@ -61,10 +61,17 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Software Engineer</h3>
+                        <div class="subheading mb-3">Coast - New York, NY</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">November 2024 - Current<br></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Senior Software Engineer</h3>
                         <h3 class="mb-0">Software Engineer II</h3>
                         <div class="subheading mb-3">West Monroe Partners - Chicago, IL & New York, NY</div>
-                        <p>Currently, I work in West Monroe's Product Engineering and Experience Lab (PXEL). My project experience includes:</p>
+                        <p>At West Monroe, I worked in their Product Engineering and Experience Lab (PXEL) practive. My project experience included:</p>
                         <ul>
                             <li>Developing personal loan product workflows for a unicorn fintech client's commercial banking platform using a React, TypeScript, and GraphQL stack</li>
                             <li>Enabling new co-branded credit card features for a unicorn fintech client's Ruby on Rails backend APIs</li>
@@ -73,7 +80,7 @@
                         </ul>
                         </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present<br>April 2021 - February 2023</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">March 2023 - October 2024<br>April 2021 - February 2023</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
