--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h3 class="mb-0">Senior Software Engineer</h3>
                         <h3 class="mb-0">Software Engineer II</h3>
                         <div class="subheading mb-3">West Monroe Partners - Chicago, IL & New York, NY</div>
-                        <p>At West Monroe, I worked in their Product Engineering and Experience Lab (PXEL) practive. My project experience included:</p>
+                        <p>At West Monroe, I worked in their Product Engineering and Experience Lab (PXEL) practice. My project experience included:</p>
                         <ul>
                             <li>Developing personal loan product workflows for a unicorn fintech client's commercial banking platform using a React, TypeScript, and GraphQL stack</li>
                             <li>Enabling new co-branded credit card features for a unicorn fintech client's Ruby on Rails backend APIs</li>
