--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         
         .social-icons .social-icon:hover {
             background-color: var(--accent-color);
-            color: #fff;
+            color: var(--bg-color);
         }
         
         .fade-in {
